force-app/main/default/objects/CPQ_Settings__c/CPQ_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Enable/disable CPQ functionality</description>
    <label>CPQ Settings</label>
</CustomObject>