force-app/main/default/objects/CPQ_Settings__c/fields/Buffer_Override__c.field-meta.xml
<CustomField>
    <fullName>Buffer_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gives permissions to ignore buffers in the Lead Time Calculation</description>
    <inlineHelpText>Gives permissions to ignore buffers in the Lead Time Calculation</inlineHelpText>
    <label>Buffer Override</label>
    <type>Checkbox</type>
</CustomField>