force-app/main/default/objects/CPQ_Settings__c/fields/Closed_Stages__c.field-meta.xml
<CustomField>
    <fullName>Closed_Stages__c</fullName>
    <label>Closed Stages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>