force-app/main/default/objects/CPQ_Settings__c/fields/Configure_Stages__c.field-meta.xml
<CustomField>
    <fullName>Configure_Stages__c</fullName>
    <label>Configure Stages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>