force-app/main/default/objects/CPQ_Settings__c/fields/Debug__c.field-meta.xml
<CustomField>
    <fullName>Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Debug mode. When enabled the pricing component shows the quote line items for admin users.</description>
    <inlineHelpText>Debug mode. When enabled the pricing component shows the quote line items for admin users.</inlineHelpText>
    <label>Debug</label>
    <type>Checkbox</type>
</CustomField>