force-app/main/default/objects/CPQ_Settings__c/fields/Detailed_View__c.field-meta.xml
<CustomField>
    <fullName>Detailed_View__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Detailed View</label>
    <type>Checkbox</type>
</CustomField>