force-app/main/default/objects/CPQ_Settings__c/fields/Discount_Override__c.field-meta.xml
<CustomField>
    <fullName>Discount_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to give special permissions for the User
- Give discount &gt;10%</description>
    <inlineHelpText>Checkbox to give special permissions for the User
- Give discount &gt;10%</inlineHelpText>
    <label>Discount_Override</label>
    <type>Checkbox</type>
</CustomField>