force-app/main/default/objects/CPQ_Settings__c/fields/Enhanced_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Enhanced_Pricing__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When Enabled uses Pricing Objects and Price Parameters</description>
    <inlineHelpText>When Enabled uses Pricing Objects and Price Parameters</inlineHelpText>
    <label>Enhanced Pricing</label>
    <type>Checkbox</type>
</CustomField>