force-app/main/default/objects/CPQ_Settings__c/fields/Group_Items__c.field-meta.xml
<CustomField>
    <fullName>Group_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Enabled Groups Configuration Items per ProductCode</description>
    <inlineHelpText>When Enabled Groups Configuration Items per ProductCode</inlineHelpText>
    <label>Group Items</label>
    <type>Checkbox</type>
</CustomField>