force-app/main/default/objects/CPQ_Settings__c/fields/IsAdmin__c.field-meta.xml
<CustomField>
    <fullName>IsAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to give special permissions for the User
- See Margins and Costs
- See item level details
- Give discount &gt;10%</description>
    <inlineHelpText>Checkbox to give special permissions for the User
- See Margins and Costs
- See item level details
- Give discount &gt;10%</inlineHelpText>
    <label>IsAdmin</label>
    <type>Checkbox</type>
</CustomField>