force-app/main/default/objects/CPQ_Settings__c/fields/maxDiscount__c.field-meta.xml
<CustomField>
    <fullName>maxDiscount__c</fullName>
    <defaultValue>10</defaultValue>
    <description>The maximum Discount a User can apply</description>
    <inlineHelpText>The maximum Discount a User can apply</inlineHelpText>
    <label>maxDiscount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>