force-app/main/default/objects/CPQ_Settings__c/fields/No_Quote_Creation__c.field-meta.xml
<CustomField>
    <fullName>No_Quote_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to disable the Automatic Quote Creation</description>
    <label>No Quote Creation</label>
    <type>Checkbox</type>
</CustomField>