force-app/main/default/objects/CPQ_Settings__c/fields/Use_Pricelist__c.field-meta.xml
<CustomField>
    <fullName>Use_Pricelist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled use the Pricelist Object instead of Price list Pricebook for retrieving Base Prices</description>
    <inlineHelpText>When enabled use the Pricelist Object instead of Price list Pricebook for retrieving Base Prices</inlineHelpText>
    <label>Use Pricelist</label>
    <type>Checkbox</type>
</CustomField>